   * Added new ScenariowML attributes: "new_game_title",
     "remove_from_carryover_on_leaders_loss" and "force_lock_settings".
   * Allow numerical values for SideWML "controller" attribute.
   * Allow WML menu items to use hotkeys alongside/instead of the menu.
   * Really added sighted events for ambushing units.
   * [scroll] now takes an optional side filter.
 * Units:
   * Gave the Death Knight proper skeletal resistances, as well as submerge.
 * User interface:
   * Help Browser:
     * Units with variants are shown as sections with their childs as topics.
     * Links to the siblings in unit variants.
     * Links to the base unit of none variants.
   * MP "Create" screen has been revamped by moving scenario configuration
     widgets to a new MP "Configure" screen, introducing a description box,
     adding a combo selection for different types of game, and adjusting it to
     work well with MP campaigns.
   * MP "Configure" and "Connect" screens have been adjusted to allow to see
     all scenarios and sides in the debug mode.
   * MP "Lobby" game item has been updated to display information about
     campaigns correctly.
   * In-game Chat Log dialog now supports text search on timestamps, nicks,
     and messages.
   * Possible fix for clipboard integration issues with GUI2 widgets on X11.
   * Fixed potential misbehavior (including invalid memory access) from the
     tray notifications code on Windows.
   * New Game Paths dialog displaying filesystem locations used by the game
     to read or write data, accessed from Preferences -> General.
 * Miscellaneous and bug fixes:
   * Added -256 and -512 color shifts to FADE_TO_BLACK and FADE_TO_BLACK_HOLD
     macros to account for ToD color shifts greater than -31, guaranteeing
     complete darkness.
   * Unit WML frames with image modifications are now shown correctly for
     hits/death.
   * Fixed compare_images.py (called by wesnoth-optipng) and pofix.py to
     function with python-3.2.