@@ -134,6 +134,9 @@ Version 1.11.6+dev:
    * Allow WML menu items to use hotkeys alongside/instead of the menu.
    * Really added sighted events for ambushing units.
    * [scroll] now takes an optional side filter.
+   * Some support for negative healing. This is not guaranteed to work correctly
+     in all cases, but it does restore the basic functionality that was
+     (probably accidentally) in 1.10.
  * Units:
    * Gave the Death Knight proper skeletal resistances, as well as submerge.
  * User interface:
